--- a/package.json
+++ b/package.json
@@ -44,20 +44,20 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "^4.0.0-beta",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-prettier": "^2.1.2",
-    "eslint-plugin-react": "^7.2.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
     "mo-js": "^0.288.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "prop-types": "^15.6.1",
+    "react": "^15.6.2",
     "react-addons-perf": "^15.4.2",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2",
-    "youtube-api-search": "^0.0.5"
+    "react-dom": "^15.6.2",
+    "react-router-dom": "^4.2.2",
+    "youtube-api-search": "0.0.5"
   }
 }
