--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "react": "^15.6.2",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.2",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.2.2"
   }
 }
